boltffi_bindgen/src/render/dart/snapshots/boltffi_bindgen__render__dart__templates__tests__snapshot_async_callback.snap
---
source: boltffi_bindgen/src/render/dart/templates.rs
expression: template.render().unwrap()
---
final class _I$ICallbackVTable extends $$ffi.Struct {
  external $$ffi.Pointer<
    $$ffi.NativeFunction<
      $$ffi.Void Function($$ffi.Uint64)
    >
  > free;

  external $$ffi.Pointer<
    $$ffi.NativeFunction<
      $$ffi.Uint64 Function($$ffi.Uint64)
    >
  > clone;

  external $$ffi.Pointer<
    $$ffi.NativeFunction<
      $$ffi.Void Function(
        $$ffi.Uint64,
        $$ffi.Uint32,
        $$ffi.Pointer<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Uint64, $$ffi.Uint32, $$ffi.Int32)>>,
        $$ffi.Uint64,
    )
    >
  > mapU32;

  external $$ffi.Pointer<
    $$ffi.NativeFunction<
      $$ffi.Void Function(
        $$ffi.Uint64,
        $$ffi.UintPtr,
        $$ffi.UintPtr,
        $$ffi.Pointer<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Uint64, $$ffi.Pointer<$$ffi.Uint8>, $$ffi.UintPtr, $$ffi.Int32)>>,
        $$ffi.Uint64,
    )
    >
  > mapStringRef;

  external $$ffi.Pointer<
    $$ffi.NativeFunction<
      $$ffi.Void Function(
        $$ffi.Uint64,
        $$ffi.UintPtr,
        $$ffi.UintPtr,
        $$ffi.Pointer<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Uint64, $$ffi.Pointer<$$ffi.Uint8>, $$ffi.UintPtr, $$ffi.Int32)>>,
        $$ffi.Uint64,
    )
    >
  > mapString;

  external $$ffi.Pointer<
    $$ffi.NativeFunction<
      $$ffi.Void Function(
        $$ffi.Uint64,
        $$ffi.UintPtr,
        $$ffi.UintPtr,
        $$ffi.Pointer<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Uint64, $$ffi.Int32)>>,
        $$ffi.Uint64,
    )
    >
  > processBytes;
}

abstract interface class ICallback {
  Future<int> mapU32(
    int n,
  );

  Future<String> mapStringRef(
    String s,
  );

  Future<String> mapString(
    String s,
  );

  Future<void> processBytes(
    $$typed_data.Uint8List bytes,
  );
}

final class _I$ICallback {
  // Deferred by one event-loop turn rather than removed immediately: `free`
  // and each method below dispatch through *separate*
  // `NativeCallable.listener`s (distinct native ports), so there is no
  // guarantee that a `free` message posted from one thread is *processed*
  // after a method-call message posted (perhaps concurrently, from another
  // thread — a `Foreign*` handle is `Send + Sync`) for the same handle,
  // even when the underlying native call that issued it happened first.
  // Running the actual removal via `Timer.run` places it at the back of
  // the event queue, after anything already queued when `free` was
  // processed — including an in-flight method-dispatch message for this
  // same handle — so that call still finds a live entry instead of
  // spuriously hitting the "invalid handle" path.
  static void free(int handle) {
    $$async.Timer.run(() {
      _k$ICallbackHandleMap.remove(handle);
    });
  }

  static int clone(int handle) {
    return _k$ICallbackHandleMap.clone(handle);
  }

  static void mapU32(
    int _p$handle,
    int n,
    $$ffi.Pointer<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Uint64, $$ffi.Uint32, $$ffi.Int32)>> _p$callback,
    int _p$callbackData,
  ) async {
    try {
final impl = _k$ICallbackHandleMap.get(_p$handle);
if (impl == null) {
throw _$$FFIException(-1, "ICallback: invalid handle `${_p$handle}`");
}
final _p$value = await impl.mapU32(n);
_p$callback.asFunction<void Function(int, int, int)>()(_p$callbackData, _p$value, 0);
} catch (e) {
_p$callback.asFunction<void Function(int, int, int)>()(_p$callbackData, 0, -1);
}

  }

  static void mapStringRef(
    int _p$handle,
    int _p$sPtr,
    int _p$sLen,
    $$ffi.Pointer<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Uint64, $$ffi.Pointer<$$ffi.Uint8>, $$ffi.UintPtr, $$ffi.Int32)>> _p$callback,
    int _p$callbackData,
  ) async {
    try {
try {
final impl = _k$ICallbackHandleMap.get(_p$handle);
if (impl == null) {
throw _$$FFIException(-1, "ICallback: invalid handle `${_p$handle}`");
}
final _p$ptr$s = $$ffi.Pointer<$$ffi.Uint8>.fromAddress(_p$sPtr);
final _p$r$s = _$$WireReader(_p$ptr$s, _p$sLen);
final _p$d$s = _p$r$s.readString();
final _p$value = await impl.mapStringRef(_p$d$s);
late final _$$WireWriter _p$w;
{
final value = _p$value;
_p$w = _$$WireWriter.transferOut((4 + (4 + value.length * 3)));
_p$w.writeString(value);
}
_p$callback.asFunction<void Function(int, $$ffi.Pointer<$$ffi.Uint8>, int, int)>()(_p$callbackData, _p$w.ptr, _p$w.len, 0);
} finally {
_f$boltffi_free_deferred_callback_bytes($$ffi.Pointer<$$ffi.Uint8>.fromAddress(_p$sPtr), _p$sLen);
}
} catch (e) {
_p$callback.asFunction<void Function(int, $$ffi.Pointer<$$ffi.Uint8>, int, int)>()(_p$callbackData, $$ffi.nullptr, 0, -1);
}

  }

  static void mapString(
    int _p$handle,
    int _p$sPtr,
    int _p$sLen,
    $$ffi.Pointer<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Uint64, $$ffi.Pointer<$$ffi.Uint8>, $$ffi.UintPtr, $$ffi.Int32)>> _p$callback,
    int _p$callbackData,
  ) async {
    try {
try {
final impl = _k$ICallbackHandleMap.get(_p$handle);
if (impl == null) {
throw _$$FFIException(-1, "ICallback: invalid handle `${_p$handle}`");
}
final _p$ptr$s = $$ffi.Pointer<$$ffi.Uint8>.fromAddress(_p$sPtr);
final _p$r$s = _$$WireReader(_p$ptr$s, _p$sLen);
final _p$d$s = _p$r$s.readString();
final _p$value = await impl.mapString(_p$d$s);
late final _$$WireWriter _p$w;
{
final value = _p$value;
_p$w = _$$WireWriter.transferOut((4 + (4 + value.length * 3)));
_p$w.writeString(value);
}
_p$callback.asFunction<void Function(int, $$ffi.Pointer<$$ffi.Uint8>, int, int)>()(_p$callbackData, _p$w.ptr, _p$w.len, 0);
} finally {
_f$boltffi_free_deferred_callback_bytes($$ffi.Pointer<$$ffi.Uint8>.fromAddress(_p$sPtr), _p$sLen);
}
} catch (e) {
_p$callback.asFunction<void Function(int, $$ffi.Pointer<$$ffi.Uint8>, int, int)>()(_p$callbackData, $$ffi.nullptr, 0, -1);
}

  }

  static void processBytes(
    int _p$handle,
    int _p$bytesPtr,
    int _p$bytesLen,
    $$ffi.Pointer<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Uint64, $$ffi.Int32)>> _p$callback,
    int _p$callbackData,
  ) async {
    try {
try {
final impl = _k$ICallbackHandleMap.get(_p$handle);
if (impl == null) {
throw _$$FFIException(-1, "ICallback: invalid handle `${_p$handle}`");
}
final _p$ptr$bytes = $$ffi.Pointer<$$ffi.Uint8>.fromAddress(_p$bytesPtr);
final _p$r$bytes = _$$WireReader(_p$ptr$bytes, _p$bytesLen);
final _p$d$bytes = _p$r$bytes.readUint8List();
await impl.processBytes(_p$d$bytes);
_p$callback.asFunction<void Function(int, int)>()(_p$callbackData, 0);
} finally {
_f$boltffi_free_deferred_callback_bytes($$ffi.Pointer<$$ffi.Uint8>.fromAddress(_p$bytesPtr), _p$bytesLen);
}
} catch (e) {
_p$callback.asFunction<void Function(int, int)>()(_p$callbackData, -1);
}

  }

}

@$$ffi.Native<$$ffi.Void Function($$ffi.Pointer<$$ffi.Void>)>(symbol: 'boltffi_teardown_i_callback_vtable', isLeaf: true)
external void _f$boltffi_teardown_i_callback_vtable($$ffi.Pointer<$$ffi.Void> vtable);

final class _I$ICallbackHandleMap implements $$ffi.Finalizable {
  final Map<int, ICallback> _map = {};
  int _counter = 1;

  late final $$ffi.Pointer<_I$ICallbackVTable> _vtable;
  // At isolate death the finalizer marks the vtable DEAD on the Rust side (a late Rust `Drop`
  // then skips its free-slot dispatch instead of calling into freed trampolines). The calloc'd
  // vtable block itself is deliberately never freed: it's a per-process singleton, and freeing it
  // is exactly what turned late drops into wild pointer calls.
  static final $$ffi.NativeFinalizer _vtableFinalizer = $$ffi.NativeFinalizer(
    $$ffi.Native.addressOf<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Pointer<$$ffi.Void>)>>(_f$boltffi_teardown_i_callback_vtable).cast(),
  );

  // `free` is void — its native call site never reads anything back — so
  // it dispatches through `NativeCallable.listener` like the qualifying
  // methods below (`DartNativeCallbackMethod::dispatch_via_listener`),
  // safe to invoke from any thread that drops the last `Foreign` handle.
  // Kept alive for as long as `_vtable` is (closed in `dispose()`).
  late final $$ffi.NativeCallable<$$ffi.Void Function($$ffi.Uint64)> _c$free;
  late final $$ffi.NativeCallable<
    $$ffi.Void Function(
      $$ffi.Uint64,
      $$ffi.Uint32,
      $$ffi.Pointer<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Uint64, $$ffi.Uint32, $$ffi.Int32)>>,
      $$ffi.Uint64,
    )
  >
  _c$mapU32;
  late final $$ffi.NativeCallable<
    $$ffi.Void Function(
      $$ffi.Uint64,
      $$ffi.UintPtr,
      $$ffi.UintPtr,
      $$ffi.Pointer<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Uint64, $$ffi.Pointer<$$ffi.Uint8>, $$ffi.UintPtr, $$ffi.Int32)>>,
      $$ffi.Uint64,
    )
  >
  _c$mapStringRef;
  late final $$ffi.NativeCallable<
    $$ffi.Void Function(
      $$ffi.Uint64,
      $$ffi.UintPtr,
      $$ffi.UintPtr,
      $$ffi.Pointer<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Uint64, $$ffi.Pointer<$$ffi.Uint8>, $$ffi.UintPtr, $$ffi.Int32)>>,
      $$ffi.Uint64,
    )
  >
  _c$mapString;
  late final $$ffi.NativeCallable<
    $$ffi.Void Function(
      $$ffi.Uint64,
      $$ffi.UintPtr,
      $$ffi.UintPtr,
      $$ffi.Pointer<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Uint64, $$ffi.Int32)>>,
      $$ffi.Uint64,
    )
  >
  _c$processBytes;

  _I$ICallbackHandleMap() {
    _vtable = $$extffi.calloc<_I$ICallbackVTable>();

    _c$free = $$ffi.NativeCallable.listener(_I$ICallback.free);
    _vtable.ref.free = _c$free.nativeFunction;
    // `clone` returns a real handle value the Rust caller reads
    // synchronously — `NativeCallable.listener` can't deliver that
    // (it defers the call; Rust would read a stale/default value
    // immediately). It keeps `Pointer.fromFunction` and relies on the
    // host never cloning a `Foreign` handle off the mutator thread.
    _vtable.ref.clone = $$ffi.Pointer.fromFunction(
      _I$ICallback.clone,
      0
    );
    _c$mapU32 = $$ffi.NativeCallable.listener(
      _I$ICallback.mapU32,
    );
    _vtable.ref.mapU32 = _c$mapU32.nativeFunction;

    _c$mapStringRef = $$ffi.NativeCallable.listener(
      _I$ICallback.mapStringRef,
    );
    _vtable.ref.mapStringRef = _c$mapStringRef.nativeFunction;

    _c$mapString = $$ffi.NativeCallable.listener(
      _I$ICallback.mapString,
    );
    _vtable.ref.mapString = _c$mapString.nativeFunction;

    _c$processBytes = $$ffi.NativeCallable.listener(
      _I$ICallback.processBytes,
    );
    _vtable.ref.processBytes = _c$processBytes.nativeFunction;

    _vtableFinalizer.attach(
      this,
      _vtable.cast(),
      detach: this,
    );
  }

  void dispose() {
    _vtableFinalizer.detach(this);
    // Mark the vtable dead FIRST (see the finalizer comment), then close the trampolines. The
    // block itself leaks by design; a disposed singleton's few bytes are reclaimed at exit.
    _f$boltffi_teardown_i_callback_vtable(_vtable.cast());
    _c$free.close();
    _c$mapU32.close();
    _c$mapStringRef.close();
    _c$mapString.close();
    _c$processBytes.close();
  }

  int insert(ICallback value) {
    final int handle = _counter + 2;
    _counter = handle;
    _map[handle] = value;
    return handle;
  }

  _$$BoltFFICallbackHandle createHandle(ICallback value) {
    return $$ffi.Struct.create()
      ..handle = insert(value)
      ..vtable = _vtable.cast();
  }

  ICallback? get(int handle) => _map[handle];

  ICallback? remove(int handle) => _map.remove(handle);

  int clone(int handle) {
    final obj = _map[handle];

    if (obj == null) {
      return 0;
    }

    return insert(obj);
  }
}

final _k$ICallbackHandleMap = _I$ICallbackHandleMap();
